<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_ip"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:key="ip_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_address"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_port"
        android:inputType="numberSigned"
        android:key="port_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port_number"/>

    <ListPreference
        android:defaultValue="Normal Text"
        android:entries="@array/scan_type_list"
        android:entryValues="@array/scan_type_list"
        android:key="scan_type"
        android:title="@string/pref_title_scan_type"/>

    <PreferenceCategory android:title="About" />

    <Preference
        android:title="@string/pref_title_open_source"
        android:key="open_source_lib"
        android:summary="@string/pref_summary_open_source" />

    <Preference
        android:title="@string/pref_title_author"
        android:key="author"
        android:summary="@string/author_name" />

</PreferenceScreen>
