<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_ip"
        android:inputType="textCapWords"
        android:key="ip_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_address"/>

   <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_port"
        android:inputType="textCapWords"
        android:key="port_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port_number"/>

</PreferenceScreen>
